#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2010-10-28  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt all function calls of "set_array_elements" and "get_array_elements"
            to new order of arguments, to solve a couple of "Segmentation fault" errors

2010-10-27  Christian Heller  <christian.heller@tuxtax.de>
        * Search bug causing "Segmentation fault" at destruction of memory models

2010-10-26  Christian Heller  <christian.heller@tuxtax.de>
        * Debug "controller/manager.c"
        * Optimise allocation and deallocation by using "allocate_model"

2010-10-25  Christian Heller  <christian.heller@tuxtax.de>
        * Make logging work again, in either test mode or knowledge mode

2010-10-22  Christian Heller  <christian.heller@tuxtax.de>
        * Figure out why logging does not produce any message in log file

2010-10-20  Christian Heller  <christian.heller@tuxtax.de>
        * Add test functions

2010-10-19  Christian Heller  <christian.heller@tuxtax.de>
        * Restructure test function directory

2010-10-10  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up logical errors
        * Adapt "set" function to try to make it work with "tester.c"

2010-09-22  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up logical errors
        * Make cyboi runnable showing help message

2010-09-19  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes
        * Correct linking errors
        * Make cyboi fully compilable and linkable again

2010-09-04  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up compilation errors stemming from previously implemented changes